[project]
name = "orb-lite"
version = "0.1.0"
description = "a minimalistic template for dynamic self-building AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "composio-openai>=0.6.18",
    "langchain-core>=0.3.31",
    "litellm>=1.59.8",
    "python-dotenv>=1.0.1",
]
